feat: updated html, added css

--- a/index.html
+++ b/index.html
@@ -2,9 +2,136 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>html test</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CV Layout</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-html test
+
+<div class="cv-container">
+    <div class="left-column">
+        <img src="Kovalova.jpg" alt="Profile Photo" class="profile-photo">
+
+        <div class="contact">
+            <h2>CONTACT</h2>
+            <p>Spekteweg 48, 13583, Berlin</p>
+            <p>+49 157 52471493</p>
+            <p>kovaleva.karina.k@gmail.com</p>
+            <p>GitHub: <a href="https://github.com/kaon-k-s">kaon-k-s</a></p>
+        </div>
+
+        <div class="education">
+            <h2>EDUCATION</h2>
+
+            <p class="underline">Retraining</p>
+            <p><strong>IT specialist for application development</strong></p>
+            <p>08.2023 – current</p>
+            <p>GPB Berlin</p>
+            <p>Berlin, Germany</p>
+
+
+            <p class="underline">Studies</p>
+            <p><strong>Bachelor of Psychology</strong></p>
+            <p>09.2011 – 06.2015</p>
+            <p>V.N. Karazin Kharkiv University</p>
+            <p>Kharkiv, Ukraine</p>
+        </div>
+
+        <div class="languages">
+            <h2>LANGUAGES</h2>
+
+            <p>English – fluent</p>
+            <p>German – very good knowledge</p>
+            <p>Ukrainian – native speaker</p>
+            <p>Russian – native speaker</p>
+        </div>
+
+        <div class="applications">
+        <h2>APPLICATIONS</h2>
+
+        <p>Visual Studio</p>
+            <p>IntelliJ IDEA</p>
+            <p>Visual Studio Code</p>
+            <p>NetBeans</p>
+            <p>Eclipse</p>
+            <p class="underline">Other:</p>
+            <p>MS Project, MS Planner, MS Teams, MS Word, MS Excel, MS Power BI, Google Drive, 1C, Zendesk, Intercom, Helpshift.</p>
+        </div>
+
+        <div class="soft-skills">
+            <h2>SOFT SKILLS</h2>
+
+            <p>Analytical thinking</p>
+            <p>Fast learner</p>
+            <p>Responsibility</p>
+            <p>Communication skills</p>
+            <p>Time management</p>
+            <p>Goal-consciousness</p>
+            <p>Accuracy</p>
+            <p>Stress resistance</p>
+        </div>
+    </div>
+    <div class="right-column">
+        <h1>Karyna Kovalova</h1>
+        <h2 id="job-title">Software Developer</h2>
+
+        <h2>SUMMARY</h2>
+        <p>With a strong foundation in application and software development, particularly in C# and Java, alongside a keen analytical mindset, rapid learning capabilities, and a strong sense of responsibility, I am poised to grow and excel as a software developer. My experience as a Technical Customer Support Consultant within the IT sector has equipped me with a deep understanding of client requirements and the complexities inherent in the industry. I am eager to contribute positively to your team by leveraging my blend of theoretical knowledge and hands-on experience.</p>
+
+        <h2>CORE COMPETENCIES  |  HARD SKILLS</h2>
+        <ul>
+            <li><strong>Programming languages</strong>: C#, Java, JavaScript, PHP</li>
+            <li><strong>Web technologies:</strong> HTML, CSS</li>
+            <li><strong>Database management:</strong> MySQL</li>
+            <li><strong>Project management:</strong> Scrum, Agile methods</li>
+            <li><strong>UX/UI design</strong></li>
+        </ul>
+
+
+        <div class="experience">
+            <h2>WORK EXPERIENCE</h2>
+            <div class="experience-item">
+                <p class="experience-job-title">Customer Support Specialist</p>
+                <p>11.2021 – 02.2022</p>
+                <p>Murka Games Limited  |  Kharkiv, Ukraine</p>
+                <ul>
+                    <li>Identifying and resolving in-game issues through the admin panel and tracker system.</li>
+                    <li>Ensuring that all issues are correctly recorded in the internal database.</li>
+                    <li>Building brand trust by effectively responding to customer needs.</li>
+                </ul>
+                <p class="achievements"><strong>Achievements:</strong> I quickly and efficiently identified the causes of issues and helped resolve them, ensuring high levels of customer satisfaction.</p>
+            </div>
+
+            <div class="experience-item">
+                <p class="experience-job-title">1st Line Support Engineer</p>
+                <p>08.2020 – 08.2021</p>
+                <p>FluentPro Software Corporation, Project Management Software  |  Kharkiv, Ukraine</p>
+                <ul>
+                    <li>Diagnose and resolve technical issues.</li>
+                    <li>Respond to customer inquiries through support communication channels.</li>
+                    <li>Review log files to identify software issues.</li>
+                    <li>Research the solution independently or with help from product teams and second-line support.</li>
+                    <li>Stay in touch with customers through online meetings, email, or chat until the issue is resolved.</li>
+                    <li>Comprehensive understanding of all company products to provide customers with accurate and detailed information quickly and efficiently.</li>
+                    <li>Follow up with customers to ensure their systems are fully functional after issues are resolved.</li>
+                </ul>
+                <p class="achievements"><strong>Achievements:</strong> A deep understanding of software and the ability to work effectively with log files enabled me to efficiently resolve user issues and achieve high customer satisfaction with programs and their maintenance.</p>
+            </div>
+
+            <div class="experience-item">
+                <p class="experience-job-title">Quality control specialist</p>
+                <p>04.2018 – 11.2018</p>
+                <p>Infuse Media, Media and Advertising  |  Kharkiv, Ukraine</p>
+                <ul>
+                    <li>Analysis and verification of information via Internet resources.</li>
+                    <li>Quality control of the work of data verification specialists.</li>
+                    <li>Search and identification of inappropriate information, errors.</li>
+                    <li>Working with the existing database of potential customers.</li>
+                </ul>
+                <p class="achievements"><strong>Achievements:</strong> High reliability and quality of information in the database.</p>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
