--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV Layout</title>
+    <title>Karyna Kovalova</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,10 +14,9 @@
 
         <div class="contact">
             <h2>CONTACT</h2>
-            <p>Spekteweg 48, 13583, Berlin</p>
-            <p>+49 157 52471493</p>
             <p>kovaleva.karina.k@gmail.com</p>
             <p>GitHub: <a href="https://github.com/kaon-k-s">kaon-k-s</a></p>
+            <p>+49 157 52471493</p>
         </div>
 
         <div class="education">
