feat: updated html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h2 id="job-title">Software Developer</h2>
 
         <h2>SUMMARY</h2>
-        <p>With a strong foundation in application and software development, particularly in C# and Java, alongside a keen analytical mindset, rapid learning capabilities, and a strong sense of responsibility, I am poised to grow and excel as a software developer. My experience as a Technical Customer Support Consultant within the IT sector has equipped me with a deep understanding of client requirements and the complexities inherent in the industry. I am eager to contribute positively to your team by leveraging my blend of theoretical knowledge and hands-on experience.</p>
+        <p>With a strong foundation in application and software development, particularly in C# and Java, alongside an analytical mindset, rapid learning capabilities, and a strong sense of responsibility, I am poised to grow and excel as a software developer. My experience as a Technical Customer Support Consultant within the IT sector has equipped me with a deep understanding of client needs and the complexities inherent in the industry. I am eager to contribute positively to your team by leveraging my blend of theoretical knowledge and hands-on experience.</p>
 
         <h2>CORE COMPETENCIES  |  HARD SKILLS</h2>
         <ul>
