--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <h2>CONTACT</h2>
             <p>kovaleva.karina.k@gmail.com</p>
             <p>GitHub: <a href="https://github.com/kaon-k-s">kaon-k-s</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/karyna-kovalova/">karyna-kovalova</a></p>
             <p>+49 157 52471493</p>
         </div>
 
